--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,11 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <version>2.6.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
     <build>
